# fus-v2-prototype

./: angular.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: database.rs  main.rs  migration.rs
src-tauri/src/entity/: database_connection.rs  migrations.rs  mod.rs  prelude.rs
src/app/: app.component.html  app.component.ts
