[package]
name = "fus-v2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "0", features = ["sqlx-sqlite", "runtime-async-std-native-tls", "macros"] }
futures = { version = "0" }
sea-orm-migration = { version = "0" }
dirs = "5.0.1"
log = "0.4.21"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
